--- a/index.html
+++ b/index.html
@@ -3,15 +3,66 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+  <!-- Icônes -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/logo32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/logo16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/x-icon" href="/GuitarLearning.ico" />
+
+  <!-- Meta tags -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="theme-color" content="#003d82" />
+  <meta name="description"
+    content="Application d'apprentissage de la guitare avec accordeur intégré, accords, gammes et exercices animés" />
+  <meta name="keywords" content="guitare, accordeur, accords, gammes, exercices, musique, apprentissage" />
+  <meta name="author" content="Christian" />
+
+  <!-- PWA -->
+  <link rel="manifest" href="/manifest.json" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Guitar Learning - Accordeur de Guitare" />
+  <meta property="og:description"
+    content="Application d'apprentissage de la guitare avec accordeur intégré, accords, gammes et exercices animés" />
+  <meta property="og:image" content="/logo512.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Guitar Learning - Accordeur de Guitare" />
+  <meta name="twitter:description"
+    content="Application d'apprentissage de la guitare avec accordeur intégré, accords, gammes et exercices animés" />
+  <meta name="twitter:image" content="/logo512.png" />
+
   <title>Guitar Learning - Accordeur de Guitare</title>
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+
+  <!-- Script pour nettoyer le cache PWA en développement -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.getRegistrations().then(function (registrations) {
+        for (let registration of registrations) {
+          registration.unregister().then(function (boolean) {
+            console.log('Service Worker désinstallé:', boolean);
+          });
+        }
+      });
+    }
+
+    // Vider le cache
+    if ('caches' in window) {
+      caches.keys().then(function (names) {
+        for (let name of names) {
+          caches.delete(name);
+        }
+      });
+    }
+  </script>
 </body>
 
 </html>
